# VibeNotification

./: CONFIG_GUIDE.md  CONTRIBUTING.md  Prompts.md  README.md  README.zh.md  config.example.json  pyproject.toml
tests/unit/: test_adapters.py  test_cli.py  test_core.py  test_debounce.py  test_managers.py  test_parsers_claude_code.py  test_parsers_codex.py  test_version.py
vibe_notification/: __init__.py  _debounce_worker.py  adapters.py  config.py  core.py  debounce.py  doctor.py  managers.py
vibe_notification/detectors/: conversation.py
vibe_notification/notifiers/: system.py
vibe_notification/parsers/: claude_code.py
