[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vibe-notification"
version = "1.0.19+jaehoon.0"
description = "智能 AI 助手会话结束通知系统"
readme = "README.md"
authors = [
    {name = "huangwb8", email = "hwb2012@qq.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
]
keywords = ["claude", "codex", "notification", "ai", "assistant"]
dependencies = [
    "importlib-metadata; python_version < '3.8'",
]
requires-python = ">=3.7"

[project.optional-dependencies]
test = [
    "pytest>=7.0,<8",
    "pytest-cov>=4.0,<5",
]
dev = [
    "pytest>=7.0,<8",
    "pytest-cov>=4.0,<5",
    "black>=23.1,<23.4",
    "isort>=5.10,<5.12",
    "flake8>=5.0,<6",
    "mypy>=1.0,<1.5",
]

[project.urls]
Homepage = "https://github.com/huangwb8/VibeNotification"
Bug-Tracker = "https://github.com/huangwb8/VibeNotification/issues"
Documentation = "https://github.com/huangwb8/VibeNotification#readme"
Source = "https://github.com/huangwb8/VibeNotification"

[project.scripts]
vibe-notification = "vibe_notification.cli:main"
vibe-notify = "vibe_notification.cli:main"

[tool.setuptools]
packages = ["vibe_notification", "vibe_notification.notifiers", "vibe_notification.parsers", "vibe_notification.detectors"]
include-package-data = true
